[gd_scene load_steps=6 format=3 uid="uid://isqvmqmwi76o"]

[ext_resource type="Texture2D" uid="uid://3k7k7ijb0qoj" path="res://Art/Weapons/1-Uzi.png" id="1_in88h"]
[ext_resource type="Script" path="res://Scene/Tourch/Tourch.gd" id="2_hp0yf"]
[ext_resource type="Texture2D" uid="uid://bw4vwyagb8qsn" path="res://light.png" id="3_wordc"]

[sub_resource type="CircleShape2D" id="CircleShape2D_7hwgs"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7wkwr"]
size = Vector2(33, 26)

[node name="Tourch" type="Sprite2D"]
texture = ExtResource("1_in88h")
script = ExtResource("2_hp0yf")

[node name="EnemyDetection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetection"]
scale = Vector2(18, 18)
shape = SubResource("CircleShape2D_7hwgs")

[node name="PointLight2D" type="PointLight2D" parent="."]
rotation = 3.14159
scale = Vector2(0.7, 0.7)
color = Color(1, 1, 1, 0.85098)
texture = ExtResource("3_wordc")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="Collided" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Collided"]
shape = SubResource("RectangleShape2D_7wkwr")

[connection signal="body_entered" from="EnemyDetection" to="." method="_on_enemy_detection_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Collided" to="." method="_on_collided_body_entered"]
